# OCR_PDF_Scanner

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
src/ocr_pdf_scanner/: __init__.py
